# chatbot

chatbot/: .gitignore
chatbot/backend/: pyproject.toml
chatbot/backend/app/: main.py
chatbot/backend/app/api/v1/endpoints/: chatbot.py
chatbot/backend/app/core/config/agents/: agents.yaml
chatbot/backend/app/core/config/tasks/: tasks.yaml
chatbot/backend/app/services/: chatbot_service.py
chatbot/backend/db/: chroma.sqlite3
chatbot/backend/knowledge/: knowledge_base.txt
chatbot/frontend/: package-lock.json  package.json  tailwind.config.ts
chatbot/frontend/src/app/: globals.css  layout.tsx  page.tsx
chatbot/frontend/src/components/: .gitignore  ChatInterface.tsx
